--- a/templates/wscall.html
+++ b/templates/wscall.html
@@ -10,7 +10,7 @@
     <script type="text/javascript" src="{% static 'js/jquery.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/ws4redis.js' %}"></script>
     <script type="application/javascript">
-        var ws = new WebSocket('ws://localhost:8000/ws/foobar?subscribe-broadcast&publish-broadcast&echo');
+        {% comment %}var ws = new WebSocket('ws://localhost:8000/ws/foobar?subscribe-broadcast&publish-broadcast&echo');
         ws.onopen = function () {
             console.log("websocket connected");
         };
@@ -25,7 +25,7 @@
         };
         function send_message(msg) {
             ws.send(msg);
-        };
+        };{% endcomment %}
         jQuery(document).ready(function ($) {
             var ws4redis = WS4Redis({
                 uri: '{{ WEBSOCKET_URI }}foobar?subscribe-broadcast&publish-broadcast&echo',
