--- a/templates/client/user_selected_project.html
+++ b/templates/client/user_selected_project.html
@@ -23,20 +23,19 @@
 
     <!-- Main content -->
     <section class="content">
+      {% comment %}
+        {%for arduino in project.arduinos.all %}
+          <br/>
+          {{ arduino.name }} ----
+          {{ arduino.id}}
+          {%for sensor in arduino.arduino_sensors.all %}
+            <br/>
+            <h2>   {{sensor.arduino_sensor.name }} </h2>
+          {% endfor %}
+        {% endfor %}
+      {% endcomment %}
 
-    {{ project.arduinos.all}}
-      {{ project.arduinos.count}}
-      {%for arduino in project.arduinos.all %}
-        <br/>
-        {{ arduino.name }} ----
-        {{ arduino.id}}
 
-      {%for sensor in arduino.arduino_sensors.all %}
-      <br/>
-      <h2>   {{sensor.arduino_sensor.name }} </h2>
-
-      {% endfor %}
-      {% endfor %}
     <div class="row">
 
       <div class="col-md-6">
@@ -48,11 +47,11 @@
           <div class="box-body">
             <dl class="dl-horizontal">
               <dt>Nombre del Proyecto </dt>
-              <dd>Proyecto IOT 1 </dd>
+              <dd> {{ project.name}} </dd>
               <dt>Fecha de implementación</dt>
-              <dd>20 de enero del 2016 -  12:40 pm</dd>
+              <dd>{{ project.created_at}} </dd>
               <dt>Mantenimientos</dt>
-              <dd>4   &nbsp;&nbsp;&nbsp;&nbsp;
+              <dd>0004   &nbsp;&nbsp;&nbsp;&nbsp;
                 <a href="#">
                   <i class="fa fa-edit"></i>
                   Ver detalle
@@ -72,9 +71,9 @@
           <div class="box-body">
             <dl class="dl-horizontal">
               <dt>Sistemas - Instalados</dt>
-              <dd>2</dd>
+              <dd>  {{ project.arduinos.count}}  </dd>
               <dt>Sensores - Instalados</dt>
-              <dd>24</dd>
+              <dd> 00 </dd>
               <dt>Configuración de Alertas</dt>
               <dd>
                 <a href="#">
@@ -111,52 +110,37 @@
                 <table class="table no-margin">
                   <thead>
                     <tr>
-                      <th>Arduino ID</th>
-                      <th>Sensor</th>
+                      <th>IoT ID</th>
+                      <th>IoT Nombre</th>
                       <th>Ultimo Fecha</th>
                       <th>Ultimo Valor</th>
                       <th>Estatus</th>
                     </tr>
                   </thead>
                   <tbody>
+
+                    {%for arduino in project.arduinos.all %}
                     <tr>
                       <td>
-                        <a href="/dash/iots">AR010101</a>
+                        <a href="/dash/iots/{{ arduino.id}}">IoT00{{ arduino.id}}</a>
                       </td>
-                      <td>Puerta trasera</td>
-                      <td>12/01/1988 12:00 pm</td>
+                      <td> {{ arduino.name }}</td>
+                      <td> {{ arduino.updated_at }}</td>
                       <td>25.55</td>
                       <td>
                         <span class="label label-success">En rango</span>
                       </td>
                     </tr>
+                    {% endfor %}
+
+
+
+
                     <tr>
                       <td>
-                        <a href="pages/examples/invoice.html">AR010101</a>
+                        <a href="pages/examples/invoice.html">IoT010101</a>
                       </td>
-                      <td>Puerta trasera</td>
-                      <td>12/01/1988 12:00 pm</td>
-                      <td>25.55</td>
-                      <td>
-                        <span class="label label-success">En rango</span>
-                      </td>
-                    </tr>
-                    <tr>
-                      <td>
-                        <a href="pages/examples/invoice.html">AR010101</a>
-                      </td>
-                      <td>Puerta trasera</td>
-                      <td>12/01/1988 12:00 pm</td>
-                      <td>25.55</td>
-                      <td>
-                        <span class="label label-success">En rango</span>
-                      </td>
-                    </tr>
-                    <tr>
-                      <td>
-                        <a href="pages/examples/invoice.html">AR010101</a>
-                      </td>
-                      <td>Puerta trasera</td>
+                      <td>demo NOMBRE</td>
                       <td>12/01/1988 12:00 pm</td>
                       <td>25.55</td>
                       <td>
@@ -165,7 +149,7 @@
                     </tr>
                     <tr>
                       <td>
-                        <a href="pages/examples/invoice.html">AR010101</a>
+                        <a href="pages/examples/invoice.html">IoT010101</a>
                       </td>
                       <td>Puerta trasera</td>
                       <td>12/01/1988 12:00 pm</td>
@@ -174,39 +158,19 @@
                         <span class="label label-warning">Fuera de Rango</span>
                       </td>
                     </tr>
-                    <tr>
-                      <td>
-                        <a href="pages/examples/invoice.html">AR010101</a>
-                      </td>
-                      <td>Puerta trasera</td>
-                      <td>12/01/1988 12:00 pm</td>
-                      <td>25.55</td>
-                      <td>
-                        <span class="label label-success">En rango</span>
-                      </td>
-                    </tr>
-                    <tr>
-                      <td>
-                        <a href="pages/examples/invoice.html">AR010101</a>
-                      </td>
-                      <td>Puerta trasera</td>
-                      <td>12/01/1988 12:00 pm</td>
-                      <td>25.55</td>
-                      <td>
-                        <span class="label label-success">En rango</span>
-                      </td>
-                    </tr>
                   </tbody>
                 </table>
               </div>
               <!-- /.table-responsive -->
             </div>
             <!-- /.box-body -->
+            {% comment %}
             <div class="box-footer clearfix">
               <a href="javascript::;" class="btn btn-sm btn-default btn-flat pull-right">
                 Ver detalle del Proyecto
               </a>
             </div>
+            {% endcomment %}
             <!-- /.box-footer -->
           </div>
           <!-- /.box -->
