--- a/templates/main_header.html
+++ b/templates/main_header.html
@@ -266,10 +266,10 @@
     <!-- Sidebar user panel -->
     <div class="user-panel">
       <div class="pull-left image">
-        <img src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+        <img src=" {% static 'adminlte/img/user2-160x160.jpg' " class="img-circle" alt="User Image">
       </div>
       <div class="pull-left info">
-        <p>Alexander Pierce</p>
+        <p>LADU USER</p>
         <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
       </div>
     </div>
@@ -288,17 +288,17 @@
       <li class="header">MAIN NAVIGATION</li>
       <li class="active treeview">
         <a href="#">
-          <i class="fa fa-dashboard"></i> <span>Dashboard s</span> <i class="fa fa-angle-left pull-right"></i>
+          <i class="fa fa-dashboard"></i> <span>ladu dash</span> <i class="fa fa-angle-left pull-right"></i>
         </a>
         <ul class="treeview-menu">
-          <li class="active"><a href="index.html"><i class="fa fa-circle-o"></i> Dashboard v1</a></li>
-          <li><a href="index2.html"><i class="fa fa-circle-o"></i> Dashboard v2</a></li>
+          <li class="active"><a href="index.html"><i class="fa fa-circle-o"></i> DEMO v1</a></li>
+          <li><a href="index2.html"><i class="fa fa-circle-o"></i> DEMO v2</a></li>
         </ul>
       </li>
       <li class="treeview">
         <a href="#">
           <i class="fa fa-files-o"></i>
-          <span>Layout Options</span>
+          <span>DEMO</span>
           <span class="label label-primary pull-right">4</span>
         </a>
         <ul class="treeview-menu">
@@ -310,13 +310,13 @@
       </li>
       <li>
         <a href="pages/widgets.html">
-          <i class="fa fa-th"></i> <span>Widgets</span> <small class="label pull-right bg-green">new</small>
+          <i class="fa fa-th"></i> <span>DEMO</span> <small class="label pull-right bg-green">new</small>
         </a>
       </li>
       <li class="treeview">
         <a href="#">
           <i class="fa fa-pie-chart"></i>
-          <span>Charts</span>
+          <span>DEMO</span>
           <i class="fa fa-angle-left pull-right"></i>
         </a>
         <ul class="treeview-menu">
@@ -329,7 +329,7 @@
       <li class="treeview">
         <a href="#">
           <i class="fa fa-laptop"></i>
-          <span>UI Elements</span>
+          <span>DEMO</span>
           <i class="fa fa-angle-left pull-right"></i>
         </a>
         <ul class="treeview-menu">
@@ -343,7 +343,7 @@
       </li>
       <li class="treeview">
         <a href="#">
-          <i class="fa fa-edit"></i> <span>Forms</span>
+          <i class="fa fa-edit"></i> <span>DEMO</span>
           <i class="fa fa-angle-left pull-right"></i>
         </a>
         <ul class="treeview-menu">
@@ -354,7 +354,7 @@
       </li>
       <li class="treeview">
         <a href="#">
-          <i class="fa fa-table"></i> <span>Tables</span>
+          <i class="fa fa-table"></i> <span>DEMO</span>
           <i class="fa fa-angle-left pull-right"></i>
         </a>
         <ul class="treeview-menu">
@@ -364,19 +364,19 @@
       </li>
       <li>
         <a href="pages/calendar.html">
-          <i class="fa fa-calendar"></i> <span>Calendar</span>
+          <i class="fa fa-calendar"></i> <span>DEMO</span>
           <small class="label pull-right bg-red">3</small>
         </a>
       </li>
       <li>
         <a href="pages/mailbox/mailbox.html">
-          <i class="fa fa-envelope"></i> <span>Mailbox</span>
+          <i class="fa fa-envelope"></i> <span>DEMO</span>
           <small class="label pull-right bg-yellow">12</small>
         </a>
       </li>
       <li class="treeview">
         <a href="#">
-          <i class="fa fa-folder"></i> <span>Examples</span>
+          <i class="fa fa-folder"></i> <span>DEMO</span>
           <i class="fa fa-angle-left pull-right"></i>
         </a>
         <ul class="treeview-menu">
@@ -392,7 +392,7 @@
       </li>
       <li class="treeview">
         <a href="#">
-          <i class="fa fa-share"></i> <span>Multilevel</span>
+          <i class="fa fa-share"></i> <span>DEMO</span>
           <i class="fa fa-angle-left pull-right"></i>
         </a>
         <ul class="treeview-menu">
@@ -413,7 +413,7 @@
           <li><a href="#"><i class="fa fa-circle-o"></i> Level One</a></li>
         </ul>
       </li>
-      <li><a href="documentation/index.html"><i class="fa fa-book"></i> <span>Documentation</span></a></li>
+      <li><a href="documentation/index.html"><i class="fa fa-book"></i> <span>DEMO</span></a></li>
       <li class="header">LABELS</li>
       <li><a href="#"><i class="fa fa-circle-o text-red"></i> <span>Important</span></a></li>
       <li><a href="#"><i class="fa fa-circle-o text-yellow"></i> <span>Warning</span></a></li>
@@ -429,9 +429,9 @@
 
   <footer class="main-footer">
     <div class="pull-right hidden-xs">
-      <b>Version</b> 2.3.0
+      <b>Version</b> 0.0.1
     </div>
-    <strong>Copyright &copy; 2014-2015 <a href="http://almsaeedstudio.com">Almsaeed Studio</a>.</strong> All rights reserved.
+    <strong>Copyright &copy; 2015-2016 LOS AMOS DEL UNIVERSO.</strong> All rights reserved.
   </footer>
 
 {% endblock %}
