--- a/templates/main_libs.html
+++ b/templates/main_libs.html
@@ -71,3 +71,10 @@
     <script src="{% static 'adminlte/js/demo.js' %}"></script>
 
 {% endblock main_js %}
+
+
+
+  {% block ntmp %}
+    <script src="{% static 'plugins/morris/morris.min.js' %}"></script>
+    <script src="{% static 'adminlte/js/pages/dashboard.js' %}"></script>
+  {% endblock ntmp %}
