--- a/templates/client/user_selected_project.html
+++ b/templates/client/user_selected_project.html
@@ -122,7 +122,7 @@
                     {%for arduino in project.arduinos.all %}
                     <tr>
                       <td>
-                        <a href="/dash/iots/{{ arduino.id}}">IoT00{{ arduino.id}}</a>
+                        <a href="/dash/iot/{{ arduino.id}}">IoT00{{ arduino.id}}</a>
                       </td>
                       <td> {{ arduino.name }}</td>
                       <td> {{ arduino.updated_at }}</td>
