--- a/templates/admin/admin_projects_detail.html
+++ b/templates/admin/admin_projects_detail.html
@@ -129,7 +129,7 @@
 <div class="row">
   <div class="col-xs-12">
     <div class="box">
-      <a href="/dash/admin/iot/new/">
+      <a href="{% url 'adminCreateArduinos' project_pk=project.id %}">
         <button class="btn btn-block btn-info btn-lg">Agregar Arduino</button>
       </a>
     </div>
