--- a/templates/main_header.html
+++ b/templates/main_header.html
@@ -33,7 +33,6 @@
                 <li><!-- start message -->
                   <a href="#">
                     <div class="pull-left">
-                      {% static 'adminlte/css/skins/_all-skins.min.css' %}
                       <img src="{% static 'adminlte/img/user2-160x160.jpg' %}"  class="img-circle" alt="User Image">
                     </div>
                     <h4>
@@ -58,7 +57,7 @@
                 <li>
                   <a href="#">
                     <div class="pull-left">
-                      <img src="dist/img/user4-128x128.jpg" class="img-circle" alt="User Image">
+                      <img src="{% static 'adminlte/img/user4-128x128.jpg' %}" class="img-circle" alt="User Image">
                     </div>
                     <h4>
                       Developers
@@ -70,7 +69,7 @@
                 <li>
                   <a href="#">
                     <div class="pull-left">
-                      <img src="dist/img/user3-128x128.jpg" class="img-circle" alt="User Image">
+                      <img src="{% static 'adminlte/img/user3-128x128.jpg' %}" class="img-circle" alt="User Image">
                     </div>
                     <h4>
                       Sales Department
@@ -82,7 +81,7 @@
                 <li>
                   <a href="#">
                     <div class="pull-left">
-                      <img src="dist/img/user4-128x128.jpg" class="img-circle" alt="User Image">
+                      <img src="{% static 'adminlte/img/user4-128x128.jpg' %}" class="img-circle" alt="User Image">
                     </div>
                     <h4>
                       Reviewers
@@ -210,13 +209,13 @@
         <!-- User Account: style can be found in dropdown.less -->
         <li class="dropdown user user-menu">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-            <img src="dist/img/user2-160x160.jpg" class="user-image" alt="User Image">
+            <img src="{% static 'adminlte/img/user2-160x160.jpg' %}" class="user-image" alt="User Image">
             <span class="hidden-xs">Alexander Pierce</span>
           </a>
           <ul class="dropdown-menu">
             <!-- User image -->
             <li class="user-header">
-              <img src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+              <img src="{% static 'adminlte/img/user2-160x160.jpg' %}" class="img-circle" alt="User Image">
               <p>
                 Alexander Pierce - Web Developer
                 <small>Member since Nov. 2012</small>
@@ -266,7 +265,7 @@
     <!-- Sidebar user panel -->
     <div class="user-panel">
       <div class="pull-left image">
-        <img src=" {% static 'adminlte/img/user2-160x160.jpg' " class="img-circle" alt="User Image">
+        <img src=" {% static 'adminlte/img/user2-160x160.jpg' %}" class="img-circle" alt="User Image">
       </div>
       <div class="pull-left info">
         <p>LADU USER</p>
