--- a/templates/admin/admin_projects.html
+++ b/templates/admin/admin_projects.html
@@ -23,7 +23,7 @@
       </ol>
     </section>
 
-    <!-- Main content -->
+<!-- Main content -->
 <section class="content">
   <div class="row">
     <div class="col-xs-12">
@@ -35,18 +35,32 @@
           <table id="table_projects" class="table table-bordered table-striped">
             <thead>
               <tr>
-                <th>Accion</th>
+
                 <th>ID Cliente</th>
                 <th>Nombre Cliente</th>
                 <th>Projecto ID/Nombre</th>
                 <th>Fecha Creación</th>
                 <th>Estatus</th>
+                <th>Accion</th>
               </tr>
             </thead>
             <tbody>
 
               {% for project in project_list %}
               <tr>
+
+
+                <td>00000</td>
+                <td>Cliente nombre</td>
+                <td>{{project.id}} - {{project.name}}</td>
+                <td> {{project.created_at}} </td>
+
+                {% if  project.id|isEven == 0%}
+                  <td> <span class="label label-danger">Pendiente Success</span> </td>
+                {% else %}
+                  <td> <span class="label label-success">Estatus Correcto</span> </td>
+                {% endif %}
+
                 <td>
                   <div class="btn-group">
                     <a href="/dash/admin/projects/detail/{{project.id}}" target="_self">
@@ -61,17 +75,6 @@
                   </div>
                 </td>
 
-                <td>00000</td>
-                <td>Cliente nombre</td>
-                <td>{{project.id}} - {{project.name}}</td>
-                <td> {{project.created_at}} </td>
-
-                {% if  project.id|isEven == 0%}
-                  <td> <span class="label label-danger">Pendiente Success</span> </td>
-                {% else %}
-                  <td> <span class="label label-success">Estatus Correcto</span> </td>
-                {% endif %}
-
               </tr>
               {% endfor %}
 
@@ -80,9 +83,10 @@
               <tr>
                 <th>ID Cliente</th>
                 <th>Nombre Cliente</th>
-                <th>Proyectos</th>
-                <th>Iots Instalados</th>
+                <th>Projecto ID/Nombre</th>
+                <th>Fecha Creación</th>
                 <th>Estatus</th>
+                <th>Accion</th>
               </tr>
             </tfoot>
           </table>
