--- a/templates/ticket/ticket_edit.html
+++ b/templates/ticket/ticket_edit.html
@@ -1,13 +1,128 @@
 {% extends 'main_header.html' %}
 {% load staticfiles %}
+{% load widget_tweaks %}
+
+
 {% block main_content_wrapper %}
 <div class="content-wrapper">
-    <h1>Add ticket</h1>
+    <!-- Content Header (Page header) -->
+    <section class="content-header">
+      <h1>
+        TICKETS - AGREGAR
+        <small>Control de Tickets</small>
+      </h1>
+      <ol class="breadcrumb">
+        <li>
+          <a href="#">
+            <i class="fa fa-dashboard"></i>
+            Home</a>
+        </li>
+        <li class="active">Tickets</li>
+      </ol>
+    </section>
 
-    <form action="." method="post">
-        {% csrf_token %}
-        {{ form }}
-        <button type="submit"> Crear </button>
-    </form>
+    <!-- Main content -->
+
+    <section class="content">
+      <div class="row">
+        <div class="col-xs-10">
+          <div class="box box-info">
+            <div class="box-header with-border">
+              <h3 class="box-title">Crear Ticket</h3>
+            </div>
+            <!-- /.box-header -->
+            <!-- form start -->
+              <form class="form-horizontal" role="form" action="." method="post">
+
+              <div class="box-body">
+                  {% csrf_token %}
+                  <div class="form-group">
+                      <label for="inputEmail3" class="col-sm-2 control-label">Titulo</label>
+                      <div class="col-sm-10">
+                         {% render_field form.title class="form-control" %}
+                      </div>
+                      <div class="col-sm-offset-2 col-sm-8">
+                         {{form.title.errors}}
+                      </div>
+                  </div>
+                  <div class="form-group">
+                      <label for="inputEmail3" class="col-sm-2 control-label">Responsable</label>
+                      <div class="col-sm-10">
+                         {% render_field form.assigned_to class="form-control" %}
+                      </div>
+                      <div class="col-sm-offset-2 col-sm-8">
+                         {{form.assigned_to.errors}}
+                      </div>
+                  </div>
+
+                  <div class="form-group">
+                      <label for="inputEmail3" class="col-sm-2 control-label">Queue </label>
+                      <div class="col-sm-10">
+                        {% render_field form.queue class="form-control" %}
+                      </div>
+                  </div>
+
+                  <div class="form-group">
+                      <label for="inputEmail3" class="col-sm-2 control-label">Status </label>
+                      <div class="col-sm-10">
+                        {% render_field form.priority class="form-control" %}
+                      </div>
+                  </div>
+
+                  <div class="form-group">
+                      <label for="inputEmail3" class="col-sm-2 control-label">Status </label>
+                      <div class="col-sm-10">
+                        {% render_field form.status class="form-control" %}
+                      </div>
+                  </div>
+
+                  <div class="form-group">
+                      <label for="inputEmail3" class="col-sm-2 control-label">description </label>
+                      <div class="col-sm-10">
+                        {% render_field form.description class="form-control" %}
+                      </div>
+                  </div>
+
+                  <div class="form-group">
+                      <label for="inputEmail3" class="col-sm-2 control-label">Fecha Creación </label>
+                      <div class="col-sm-10">
+                        {% render_field form.created class="form-control" type="date" %}
+                      </div>
+                  </div>
+
+                  <div class="form-group">
+                      {{form.due_date.errors}}
+                      <label for="inputEmail3" class="col-sm-2 control-label">Fecha Vencimiento </label>
+                      <div class="col-sm-10">
+                        {% render_field form.due_date class="form-control" type="date" %}
+                      </div>
+                  </div>
+              </div>
+              <!-- /.box-body -->
+              <div class="box-footer">
+                <button type="reset" class="btn btn-default">Reset</button>
+                <button type="submit" class="btn btn-primary">Crear Ticket</button>
+              </div>
+              <!-- /.box-footer -->
+            </form>
+          </div>
+          </div><!-- /.box -->
+        </div>
+      </div>
+
+    </section>
+    <!-- /.content -->
+    </div>
+    <!-- /.content-wrapper -->
+
+
+
+
 </div>
 {% endblock main_content_wrapper %}
+
+
+{% block content_js %}
+
+
+{% endblock content_js %}
