--- a/templates/ticket/ticket_detail.html
+++ b/templates/ticket/ticket_detail.html
@@ -2,7 +2,151 @@
 {% load staticfiles %}
 
 {% block main_content_wrapper %}
+
+
 <div class="content-wrapper">
-    {{ ticket }}
+
+  <section class="content-header">
+    <h1>
+      Detalle del Ticket - {{ ticket.title }}
+      <small> {{ ticket.queue }} </small>
+    </h1>
+    <ol class="breadcrumb">
+      <li>
+        <a href="#">
+          <i class="fa fa-dashboard"></i>
+          Home</a>
+      </li>
+      <li class="active">Tickets</li>
+    </ol>
+  </section>
+
+
+  <!-- Main content -->
+  <section class="content">
+
+    <div class="row">
+
+      <div class="col-md-6">
+        <div class="box box-solid">
+          <div class="box-header with-border">
+            <i class="fa fa-adjust"></i>
+            <h3 class="box-title">Información del Ticket</h3>
+          </div><!-- /.box-header -->
+          <div class="box-body">
+            <dl class="dl-horizontal">
+              <dt>Cliente  </dt>
+              <dd> Cliente - {{ ticket.title}} </dd>
+              <dt>Titulo del Ticket</dt>
+              <dd> {{ ticket.title }} </dd>
+              <dt>Queue que pertenece </dt>
+              <dd> {{ ticket.queue }} </dd>
+              <dt>Responsable </dt>
+              <dd> {{ ticket.assigned_to }} </dd>
+              <dt>Estatus </dt>
+              <dd> {{ ticket.status }} </dd>
+              <dt>Prihoridad </dt>
+              <dd> {{ ticket.priority }} </dd>
+              <dt>Fecha de Creación </dt>
+              <dd> {{ ticket.created }} </dd>
+              <dt>Fecha limite </dt>
+              <dd> {{ ticket.due_date }} </dd>
+              <dt>Descripción</dt>
+              <dd> {{ ticket.description }} </dd>
+            </dl>
+          </div><!-- /.box-body -->
+        </div><!-- /.box -->
+      </div><!-- ./col -->
+
+      <div class="col-md-6">
+        <div class="box box-solid">
+          <div class="box-header with-border">
+            <i class="fa fa-adjust"></i>
+            <h3 class="box-title">Agregar Comentario</h3>
+          </div><!-- /.box-header -->
+          <div class="box-body">
+            <dl class="dl-horizontal">
+              <dt>Total de Comentarios  </dt>
+              <dd> {{ ticket.followup.all.count}} </dd>
+              <dt>Ultimo Comentario</dt>
+              <dd> {{ ticket.followup.last.date}} </dd>
+
+            </dl>
+            <button type="submit" class="btn btn-primary">Agregar Comentario?</button>
+          </div><!-- /.box-body -->
+        </div><!-- /.box -->
+      </div><!-- ./col -->
+
+    </div><!-- ./row -->
+
+
+    <div class="row">
+      <div class="col-md-10">
+        <div class="box box-solid">
+          <div class="box-header with-border">
+            <h3 class="box-title">Comentarios del Ticket</h3>
+          </div>
+          <!-- /.box-header -->
+          <div class="box-body">
+            <div class="box-group" id="accordion">
+
+              {% for comment in ticket.followup.all %}
+
+              {% endfor %}
+
+              <!-- we are adding the .panel class so bootstrap.js collapse plugin detects it -->
+              <div class="panel box box-primary">
+                <div class="box-header with-border">
+                  <h4 class="box-title">
+                    <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" class="">
+                      Collapsible Group Item #1
+                    </a>
+                  </h4>
+                </div>
+                <div id="collapseOne" class="panel-collapse collapse in" aria-expanded="true">
+                  <div class="box-body">
+                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3
+
+                  </div>
+                </div>
+              </div>
+
+              <div class="panel box box-danger">
+                <div class="box-header with-border">
+                  <h4 class="box-title">
+                    <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" class="collapsed" aria-expanded="false">
+                      Collapsible Group Danger
+                    </a>
+                  </h4>
+                </div>
+                <div id="collapseTwo" class="panel-collapse collapse" aria-expanded="false" style="height: 0px;">
+                  <div class="box-body">
+                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3
+                    wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum
+                    eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla
+                    assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred
+                    nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer
+                    farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus
+                    labore sustainable VHS.
+                  </div>
+                </div>
+              </div>
+
+            </div>
+          </div>
+          <!-- /.box-body -->
+        </div>
+        <!-- /.box -->
+      </div>
+    </div>
+
+
+
+  </section>
+
+
+
 </div>
+
+
 {% endblock main_content_wrapper %}
