--- a/templates/ticket/ticket_detail.html
+++ b/templates/ticket/ticket_detail.html
@@ -72,6 +72,7 @@
               <dd> {{ ticket.followup.last.date}} </dd>
 
             </dl>
+              {{ form }}
             <button type="submit" class="btn btn-primary">Agregar Comentario?</button>
           </div><!-- /.box-body -->
         </div><!-- /.box -->
