--- a/templates/ticket/ticket_detail.html
+++ b/templates/ticket/ticket_detail.html
@@ -219,14 +219,15 @@
 
             </div> <!-- DIV DE LA MITAD DEL FORM -->
           </div>
-        </form>
+
 
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-outline pull-left" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-outline">Crear Ticket</button>
+        <button type="submit" class="btn btn-outline">Crear Comentario</button>
       </div>
     </div>
+      </form>
     <!-- /.modal-content -->
   </div>
   <!-- /.modal-dialog -->
