--- a/templates/ticket/ticket_detail.html
+++ b/templates/ticket/ticket_detail.html
@@ -1,7 +1,7 @@
 {% extends 'main_header.html' %}
 {% load staticfiles %}
 {% load widget_tweaks %}
-
+{% load arduino_tags %}
 
 {% block main_content_wrapper %}
 
@@ -54,8 +54,8 @@
               <dd> {{ ticket.due_date }} </dd>
               <dt>Descripción</dt>
               <dd> {{ ticket.description }} </dd>
-              <dt>Comentarios</dt>
-              <dd> {{ ticket.follow_up.all.count }} </dd>
+              <dt>Comentarios:</dt>
+              <dd> {{ ticket.followups.all.count }} </dd>
             </dl>
           </div><!-- /.box-body -->
         </div><!-- /.box -->
@@ -86,47 +86,39 @@
           <div class="box-body">
             <div class="box-group" id="accordion">
 
-              {% for comment in ticket.followup.all %}
+              {% for comment in ticket.followups.all|order_by:'-date' %}
+
+              {% if  forloop.counter == 1 %}
+                <div class="panel box box-danger">
+              {% else %}
+                <div class="panel box box-primary">
+              {% endif %}
+                <div class="box-header with-border">
+                  <h4 class="box-title">
+
+                    {% if  forloop.counter == 1 %}
+                      <a data-toggle="collapse" data-parent="#accordion" href="#collapse_{{forloop.counter}}" aria-expanded="true" class="">
+                    {% else %}
+                      <a data-toggle="collapse" data-parent="#accordion" href="#collapse_{{forloop.counter}}" aria-expanded="false" class="">
+                    {% endif %}
+                      {{comment.title}}  - {{comment.date}} -  {{comment.id}} -
+                    </a>
+                  </h4>
+                </div>
+
+                {% if  forloop.counter == 1 %}
+                  <div id="collapse_{{forloop.counter}}" class="panel-collapse collapse in" aria-expanded="true">
+                {% else %}
+                  <div id="collapse_{{forloop.counter}}" class="panel-collapse collapse" aria-expanded="false">
+                {% endif %}
+                  <div class="box-body">
+                    {{comment.user}} - {{comment.get_new_status_display}}<br/>
+                    {{comment.comment}}
+                  </div>
+                </div>
+              </div>
 
               {% endfor %}
-
-              <!-- we are adding the .panel class so bootstrap.js collapse plugin detects it -->
-              <div class="panel box box-primary">
-                <div class="box-header with-border">
-                  <h4 class="box-title">
-                    <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" class="">
-                      Collapsible Group Item #1
-                    </a>
-                  </h4>
-                </div>
-                <div id="collapseOne" class="panel-collapse collapse in" aria-expanded="true">
-                  <div class="box-body">
-                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3
-                  </div>
-                </div>
-              </div>
-
-              <div class="panel box box-danger">
-                <div class="box-header with-border">
-                  <h4 class="box-title">
-                    <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" class="collapsed" aria-expanded="false">
-                      Collapsible Group Danger
-                    </a>
-                  </h4>
-                </div>
-                <div id="collapseTwo" class="panel-collapse collapse" aria-expanded="false" style="height: 0px;">
-                  <div class="box-body">
-                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3
-                    wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum
-                    eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla
-                    assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred
-                    nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer
-                    farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus
-                    labore sustainable VHS.
-                  </div>
-                </div>
-              </div>
-
             </div>
           </div>
           <!-- /.box-body -->
@@ -237,8 +229,8 @@
 
 {% block content_js %}
 
-$('#createComment').on('shown.bs.modal', function () {
-  $('#myInput').focus()
-})
+  $('#createComment').on('shown.bs.modal', function () {
+    $('#myInput').focus()
+  });
 
 {% endblock content_js %}
