CRUD for Enterprises and Clients.

--- a/templates/client/user_dashboard.html
+++ b/templates/client/user_dashboard.html
@@ -101,7 +101,7 @@
           <div class="box box-info">
             <div class="box-header with-border">
               <h3 class="box-title">
-                Projecto - Arduino - Test 1
+                Projecto - IOT - Test 1
               </h3>
               <div class="box-tools pull-right">
                 <button class="btn btn-box-tool" data-widget="collapse">
@@ -118,7 +118,7 @@
                 <table class="table no-margin">
                   <thead>
                     <tr>
-                      <th>Arduino ID</th>
+                      <th>Sistema ID</th>
                       <th>Sensor</th>
                       <th>Ultimo Fecha</th>
                       <th>Ultimo Valor</th>
@@ -224,7 +224,7 @@
           <div class="box box-info">
             <div class="box-header with-border">
               <h3 class="box-title">
-                Projecto - Arduino - Test 2
+                Projecto - Sistema - Test 2
               </h3>
               <div class="box-tools pull-right">
                 <button class="btn btn-box-tool" data-widget="collapse">
@@ -241,7 +241,7 @@
                 <table class="table no-margin">
                   <thead>
                     <tr>
-                      <th>Arduino ID</th>
+                      <th>Sistema ID</th>
                       <th>Sensor</th>
                       <th>Ultimo Fecha</th>
                       <th>Ultimo Valor</th>
